# lunarAPI

./: .dockerignore  .env.example  .env.sqlite.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  lunar_car_dev.db  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 202604110001_phase1_schema.py
app/: __init__.py  main.py
app/api/routes/: auth.py  drivers.py  media.py  submissions.py  trips.py
app/core/: config.py  db.py  ids.py  security.py  storage.py
app/models/: __init__.py  audit_event.py  driver.py  media.py  submission.py  trip.py
app/portal/: __init__.py  routes.py
app/portal/static/: index.html  portal.css  portal.js
app/schemas/: auth.py  common.py  driver.py  media.py  portal.py  submissions.py  trip.py
app/services/: audit_service.py  auth_service.py  driver_service.py  media_service.py  portal_service.py  submission_service.py  trip_service.py
scripts/: run_sqlite_dev.sh
tests/: conftest.py  test_db_readiness.py  test_phase1_flows.py  test_portal.py  test_settings.py
